# cvode-4.0.0-development

./: make_cvode.sh
include/cusolver_sparse/: cvode_cusolver_spqr.h
include/cvode/: cvode.h
include/nvector/cuda/: VectorKernels.cuh
src/: CMakeLists.txt
src/cusolver_sparse/: CMakeLists.txt  cvode_cusolver_spqr.cu  cvode_cusolver_spqr_impl.h
src/cvode/: CMakeLists.txt  cvode.c  cvode_impl.h  cvode_io.c  cvode_nls.c
